--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,268 @@
-/* место для вашего кода */
+/* ЗАГОЛОВОК САЙТА */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 292px;
+}
+.navigation {
+  display: flex;
+  gap: 30px;
+  padding-left: 50px;
+  font-size: 18px;
+  list-style-type: circle;
+}
+
+.image_header {
+  position: relative;
+  width: 155px;
+  height: 107px;
+  margin-right: 150px;
+}
+
+.basic_info {
+  width:240px;
+  margin-right: 50px;
+  font-size: 18px;
+  line-height: auto;
+  list-style: none;
+}
+
+
+.navig_main_link {
+  text-decoration: none;
+  list-style: none;
+}
+
+.link_far_underline {
+  border-bottom: 1.5px solid black;
+  text-decoration: none;
+}
+
+
+/* ВТОРОЙ ЭКРАН */
+
+
+.second_screen_section {
+  position: relative;
+  min-height: 750px;
+}
+
+ .overlay {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+} 
+
+.second_screen_background_photo {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url(/images/cover.jpg);
+  background-size: cover;
+}
+
+
+.second_screen_text {
+  position: absolute;
+  z-index: 2;
+  color: white;
+  font-weight: bold;
+  font-size: 100px;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+}
+
+.ono {
+  position: absolute;
+  top: 120px;
+  left: 50px;
+}
+
+.tebe {
+  position: absolute;
+  top: 300px;
+  left: 380.5px;
+}
+.nado {
+  position: absolute;
+  top: 435px;
+  left: 663px;
+}
+
+.text_second_screen_over_betbutton {
+  position: absolute;
+  top:670px;
+  z-index: 2;
+  margin-left: 50px;
+  color: white;
+  font-weight: lighter;
+  font-size: 22px;
+  text-transform: uppercase;
+  word-spacing: 30px;
+}
+
+.betbutton {
+  position: absolute;
+  top: 665px;
+  left: 795px;
+  z-index: 2;
+  width: 256px;
+  height: 51px;
+  border: 2px solid white;
+  color: white;
+  font-size: 22px;
+  text-transform: uppercase;
+  background-color: transparent;
+}
+
+
+/* ГЛАВНАЯ СЕКЦИЯ */
+.main_section_header {
+  margin-top: 190px;
+  margin-left: 65px;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-top: 27px;
+}
+.card {
+  width: 334px;
+  height: 600px;
+  background-position: center;
+  background-size: cover;
+}
+
+.card_conteiner {
+  position: relative;
+  width: 334px;
+  height: 600px;
+}
+
+.first {
+  background-image: url(/images/card-lot-01.jpg);
+}
+
+.second {
+  background-image: url(/images/card-lot-02.jpg);
+}
+
+.third {
+  background-image: url(/images/card-lot-03.jpg);
+}
+
+.card_header {
+  position: absolute;
+  top: 48px;
+  left: 50px;
+  z-index: 2;
+  width: 270px;
+  color: white;
+  font-weight: bold;
+  font-size: 22px;
+  text-transform: uppercase;
+}
+
+.card_text {
+  position: absolute;
+  bottom: 50px;
+  left: 50px;
+  z-index: 2;
+  width: 260px;
+  color: white;
+  font-size: 20px;
+}
+
+.see_more {
+  display: block;
+  margin-top: 30px;
+  margin-left: 64px;
+  font-size: 20px;
+}
+
+
+/* СЕКЦИЯ О ПРОЕКТЕ */
+.about {
+  display: grid;
+  grid-template-columns: 400px 1fr;
+  margin-top: 120px;
+
+}
+
+.img_logo {
+  align-self: center;
+  width: 150px;
+  height: 115px;
+}
+
+.logo_white_background {
+  display: flex;
+  justify-content: center;
+  width: 240px;
+  height: 240px;
+  margin-top: 36px;
+  margin-left: 71px;
+  border-radius: 55%;
+  background-color: black;
+}
+
+.about_header {
+  justify-self: start;
+  margin-top: 130px;
+  margin-right: 40px;
+  font-weight: bold;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.about_text {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-column: 2/3;
+  gap: 24px;
+  width: 690px;
+  margin-right:40px;
+  font-size: 20px;
+}
+
+/* ФУТЕР */
+.footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  height: 140px;
+  margin-top: 181px;
+}
+
+.footer_basicinfo {
+  margin-left: 51px;
+}
+
+.navigation_footer {
+  display: flex;
+  flex-flow: column;
+  justify-self: center;
+  align-items: center;
+  list-style: none;
+}
+
+.footer_links {
+  display: flex;
+  justify-self: center;
+  gap: 48px;
+  width: 240px;
+  margin-left: 50px;
+  list-style: none;
+}
+
+.footer_img {
+  width: 48px;
+  height: 48px;
+}
