--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 292px;
+  margin-top: 90px;
+  margin-bottom: 95px;
 }
 .navigation {
   display: flex;
@@ -20,6 +21,10 @@
   margin-right: 150px;
 }
 
+.no_italic {
+  font-style: normal;
+}
+
 .basic_info {
   width:240px;
   margin-right: 50px;
@@ -28,8 +33,7 @@
   list-style: none;
 }
 
-
-.navig_main_link {
+.navig_link {
   text-decoration: none;
   list-style: none;
 }
@@ -40,34 +44,32 @@
 }
 
 
-/* ВТОРОЙ ЭКРАН */
+/* ГЛАВНАЯ СЕКЦИЯ */
 
-
-.second_screen_section {
+.main_screen_section {
   position: relative;
   min-height: 750px;
 }
 
  .overlay {
   position: absolute;
-  z-index: 1;
+  z-index: -1;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.6);
 } 
 
-.second_screen_background_photo {
+.main_screen_background_photo {
   position: absolute;
+  z-index: -2;
   width: 100%;
   height: 100%;
-  background-image: url(/images/cover.jpg);
+  background-image: url(../images/cover.jpg);
   background-size: cover;
 }
 
 
-.second_screen_text {
-  position: absolute;
-  z-index: 2;
+.main_screen_text {
   color: white;
   font-weight: bold;
   font-size: 100px;
@@ -75,110 +77,124 @@
   text-transform: uppercase;
 }
 
-.ono {
-  position: absolute;
-  top: 120px;
-  left: 50px;
-}
-
-.tebe {
-  position: absolute;
-  top: 300px;
-  left: 380.5px;
-}
-.nado {
-  position: absolute;
-  top: 435px;
-  left: 663px;
-}
-
-.text_second_screen_over_betbutton {
-  position: absolute;
-  top:670px;
-  z-index: 2;
+#ono {
+  display: block;
+  width: 100%;
   margin-left: 50px;
+  padding-top: 165px;
+}
+
+#tebe {
+  display: block;
+  margin-left: 380px;
+  margin-top: 20px; 
+  width: 100%;
+}
+#nado {
+  display: block;
+  margin-left: 665px;
+  margin-top: 20px;
+}
+
+.text_main_screen_over_betbutton {
+  display: inline-block;
   color: white;
+  margin-top: 106px;
+  margin-left: 50px;
+  width: 65%;
   font-weight: lighter;
   font-size: 22px;
   text-transform: uppercase;
-  word-spacing: 30px;
+  word-spacing: 20px;
 }
 
-.betbutton {
-  position: absolute;
-  top: 665px;
-  left: 795px;
-  z-index: 2;
+.betbutton_style {
   width: 256px;
   height: 51px;
-  border: 2px solid white;
+  border: 2px solid currentColor;
   color: white;
   font-size: 22px;
   text-transform: uppercase;
   background-color: transparent;
+  margin-left: 20px;
 }
 
 
-/* ГЛАВНАЯ СЕКЦИЯ */
-.main_section_header {
+/* ЛОТЫ */
+.Lots_section_header {
   margin-top: 190px;
   margin-left: 65px;
   font-size: 40px;
   text-transform: uppercase;
 }
 
-
 .cards {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: flex-start;
+  gap: 25px;
   margin-top: 27px;
+  margin-left: 25px;
+  list-style: none;
 }
-.card {
-  width: 334px;
-  height: 600px;
-  background-position: center;
-  background-size: cover;
+
+.card_link_style {
+  display: block;
+  height: 100%;
+  width: 100%;
+  color: white;
+  text-decoration:none;
 }
 
 .card_conteiner {
   position: relative;
   width: 334px;
-  height: 600px;
+  min-height: 600px; 
 }
 
-.first {
+.card_background {
+  position: absolute;
+  z-index: -2;
+  width: 100%;
+  height: 100%;
+}
+
+.film {
   background-image: url(/images/card-lot-01.jpg);
 }
 
-.second {
+.book {
   background-image: url(/images/card-lot-02.jpg);
 }
 
-.third {
+.painting {
   background-image: url(/images/card-lot-03.jpg);
 }
 
+.card_info {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 40px;
+  width:254px;
+}
+
 .card_header {
-  position: absolute;
-  top: 48px;
-  left: 50px;
-  z-index: 2;
-  width: 270px;
   color: white;
   font-weight: bold;
   font-size: 22px;
   text-transform: uppercase;
+  margin-top: 48px;
+  text-decoration: underline;
+  text-underline-offset: 4px;
+  text-decoration-thickness: 1px;
 }
 
 .card_text {
-  position: absolute;
-  bottom: 50px;
-  left: 50px;
-  z-index: 2;
-  width: 260px;
   color: white;
   font-size: 20px;
+  margin-bottom: 48px;
 }
 
 .see_more {
@@ -237,11 +253,11 @@
 .footer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  height: 140px;
+  margin-bottom: 80px;
   margin-top: 181px;
 }
 
-.footer_basicinfo {
+.footer_adress_margin {
   margin-left: 51px;
 }
 
