--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,9 @@
 /* ЗАГОЛОВОК САЙТА */
-
+body {
+  width: 1100px;
+  margin: 0 auto;
+  font-family: Raleway, sans-serif;
+}
 .header {
   display: flex;
   justify-content: space-between;
