--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 /* ЗАГОЛОВОК САЙТА */
 
-.header {
+/* .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -43,7 +43,7 @@
   border-bottom: 1.5px solid black;
   text-decoration: none;
 }
-
+ */
 
 /* ГЛАВНАЯ СЕКЦИЯ */
 
