--- a/styles/style.css
+++ b/styles/style.css
@@ -2,24 +2,24 @@
 
 .header {
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
   align-items: center;
-  margin-top: 85px;
-  margin-bottom: 90px;
+  margin-top: 90px;
+  margin-bottom: 94px;
 }
 .navigation {
   display: flex;
-  gap: 35px;
-  padding-left: 50px;
+  gap: 33px;
   font-size: 18px;
   list-style-type: circle;
+  margin-left: 50px;
 }
 
 .image_header {
-  position: relative;
-  width: 150x;
-  height: 110px;
-  margin-right: 150px;
+  width: 155px;
+  height: 105px;
+  margin-left: 34px;
+
 }
 
 .no_italic {
@@ -28,11 +28,9 @@
 
 .basic_info {
   width:220px;
-  margin-right: 35px;
-  margin-bottom: 20px;
+  margin-left: 183px;
   font-size: 18px;
-  line-height: auto;
-  list-style: none;
+  line-height: 25px;
 }
 
 .navig_link {
@@ -50,7 +48,7 @@
 
 .main_screen_section {
   position: relative;
-  min-height: 760px;
+  min-height: 757px;
 }
 
  .overlay {
@@ -88,30 +86,30 @@
 #tebe {
   display: block;
   margin-left: 380px;
-  margin-top: 20px;
+  margin-top: 15px;
 }
 
 #nado {
   display: block;
-  margin-left: 665px;
+  margin-left: 664px;
   margin-top: 20px;
 }
 
 .text_main_screen_over_betbutton {
   display: inline-block;
   color: white;
-  margin-top: 110px;
+  margin-top: 118px;
   margin-left: 50px;
   width: 65%;
   font-weight: lighter;
   font-size: 22px;
   text-transform: uppercase;
-  word-spacing: 27px;
+  word-spacing: 18.5px;
 }
 
 .betbutton_style {
   width: 256px;
-  height: 51px;
+  height: 50px;
   border: 2px solid currentColor;
   color: white;
   font-size: 22px;
@@ -122,7 +120,7 @@
 
 /* ЛОТЫ */
 .Lots_section_header {
-  margin-top: 170px;
+  margin-top: 179px;
   margin-left: 65px;
   font-size: 40px;
   text-transform: uppercase;
@@ -185,7 +183,7 @@
   font-weight: bold;
   font-size: 22px;
   text-transform: uppercase;
-  margin-top: 48px;
+  margin-top: 50px;
   text-decoration: underline;
   text-underline-offset: 4px;
   text-decoration-thickness: 1px;
@@ -194,7 +192,7 @@
 .card_text {
   color: white;
   font-size: 20px;
-  margin-bottom: 48px;
+  margin-bottom: 50px;
 }
 
 .see_more {
@@ -202,13 +200,14 @@
   margin-top: 30px;
   margin-left: 64px;
   font-size: 20px;
+  text-underline-offset: 3px;
 }
 
 /* СЕКЦИЯ О ПРОЕКТЕ */
 .about {
   display: grid;
-  grid-template-columns: 400px 1fr;
-  margin-top: 120px;
+  grid-template-columns: 334px 1fr;
+  margin-top: 115px;
 
 }
 
@@ -221,18 +220,18 @@
 .logo_white_background {
   display: flex;
   justify-content: center;
-  width: 275px;
-  height: 275px;
-  margin-top: 36px;
-  margin-left: 71px;
+  width: 240px;
+  height: 240px;
+  margin-top: 35px;
+  margin-left: 62px;
   border-radius: 55%;
   background-color: black;
 }
 
 .about_header {
   justify-self: start;
-  margin-top: 130px;
-  margin-right: 40px;
+  margin-top: 137px;
+  margin-left: 40px;
   font-weight: bold;
   font-size: 40px;
   text-transform: uppercase;
@@ -240,11 +239,12 @@
 
 .about_text {
   display: grid;
-  grid-template-rows: 1fr 1fr;
+  margin-top: 8px;
+  grid-template-rows: 145px;
+  margin-left: 40px;
   grid-column: 2/3;
-  width: 690px;
-  margin-right:80px;
   font-size: 20px;
+  width:695px;
 }
 
 /* ФУТЕР */
@@ -252,7 +252,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   margin-bottom: 80px;
-  margin-top: 150px;
+  margin-top: 181px;
 }
 
 .footer_adress_margin {
@@ -265,6 +265,9 @@
   justify-self: center;
   align-items: center;
   list-style: none;
+  text-underline-offset: 3px;
+  line-height: 22px;
+  font-size: 18px;
 }
 
 .footer_links {
@@ -272,11 +275,17 @@
   justify-self: center;
   gap: 48px;
   width: 240px;
-  margin-left: 50px;
+  margin-left: 30px;
   list-style: none;
 }
 
 .footer_img {
   width: 48px;
   height: 48px;
+}
+
+.basic_info_footer {
+  width:240px;
+  font-size: 18px;
+  line-height: 25px;
 }
